...
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:text="@string/color_blue"
            android:textColor="@color/pocketpaint_color_picker_rgb_blue" />

        <SeekBar
            android:id="@+id/color_picker_color_rgb_seekbar_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="4.5"
            android:max="255" />

...
